# kage

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  railway.json  roadmap.md  x-posts.md
.claude/: settings.json
.github/workflows/: ci.yml
demos/: README.md  cli-demo.html  zk-demo.html
demos/claude-agent/: .env.example  README.md  agent.py
demos/crewai-swarm/: .env.example  README.md  swarm.py
demos/eliza-agent/: README.md  character.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  MODULE-REALITY.md  OPERATIONS.md  QUICKSTART.md  SECURITY.md
programs/kage/: Cargo.toml
programs/kage/src/: errors.rs  lib.rs  state.rs
programs/kage/src/instructions/: grant_access.rs  initialize.rs  mod.rs  revoke_access.rs  revoke_credential.rs  store_memory.rs  verify_credential.rs  verify_proof.rs
programs/kage/src/utils/: ed25519_precompile.rs  mod.rs
tests/: package.json  tsconfig.json  vitest.integration.config.ts
tests/src/: arweave.test.ts  credential-program.integration.test.ts  credential-tx.test.ts  did.test.ts  encryption.test.ts  messaging.test.ts  plugin.test.ts  reputation-zk.test.ts  vault.test.ts  zk.test.ts
