[package]
name = "kage"
version = "0.1.0"
description = "Shadow Memory Protocol - Privacy-first AI agent memory vault on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
sp1-solana = "0.1"
solana-program = "2.3"
